--- a/src/pie.html
+++ b/src/pie.html
@@ -9,14 +9,14 @@
 
 <body>
 <div class="container">
-    <div class="item" id="MFqeCQBHbpRK" style="width:900px;height:500px;"></div>
+    <div class="item" id="gAOHeDpCrgHR" style="width:900px;height:500px;"></div>
 </div>
 
 <script type="text/javascript">
     "use strict";
-    let goecharts_MFqeCQBHbpRK = echarts.init(document.getElementById('MFqeCQBHbpRK'), "white");
-    let option_MFqeCQBHbpRK = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":false},"series":[{"name":"work stat","type":"pie","waveAnimation":false,"roseType":"","radius":200,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"Self-emp-not-inc","value":2541},{"name":"Private","value":22696},{"name":"?","value":1836},{"name":"Self-emp-inc","value":1116},{"name":"Without-pay","value":14},{"name":"Never-worked","value":7},{"name":"State-gov","value":1298},{"name":"Local-gov","value":2093},{"name":"Federal-gov","value":960}],"label":{"show":true,"formatter":"{b}: {c}"}}],"title":{"text":"Employee Work Status"},"tooltip":{"show":false}};
-    goecharts_MFqeCQBHbpRK.setOption(option_MFqeCQBHbpRK);
+    let goecharts_gAOHeDpCrgHR = echarts.init(document.getElementById('gAOHeDpCrgHR'), "white");
+    let option_gAOHeDpCrgHR = {"color":["#5470c6","#91cc75","#fac858","#ee6666","#73c0de","#3ba272","#fc8452","#9a60b4","#ea7ccc"],"legend":{"show":false},"series":[{"name":"work stat","type":"pie","waveAnimation":false,"roseType":"","radius":200,"renderLabelForZeroData":false,"selectedMode":false,"animation":false,"data":[{"name":"Never-worked","value":7},{"name":"Self-emp-not-inc","value":2541},{"name":"Private","value":22696},{"name":"Federal-gov","value":960},{"name":"?","value":1836},{"name":"Self-emp-inc","value":1116},{"name":"Without-pay","value":14},{"name":"State-gov","value":1298},{"name":"Local-gov","value":2093}],"label":{"show":true,"formatter":"{b}: {c}"}}],"title":{"text":"Employee Work Status"},"tooltip":{"show":false}};
+    goecharts_gAOHeDpCrgHR.setOption(option_gAOHeDpCrgHR);
 </script>
 
 <style>
